# libscryptcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/scryptcpp/: scrypt.h
src/: scrypt.cpp
